@@ -3,6 +3,7 @@ package dev.langchain4j.rag.content.aggregator;
 import dev.langchain4j.data.segment.TextSegment;
 import dev.langchain4j.model.scoring.ScoringModel;
 import dev.langchain4j.rag.content.Content;
+import dev.langchain4j.rag.content.ContentMetadata;
 import dev.langchain4j.rag.query.Query;
 import dev.langchain4j.rag.query.transformer.ExpandingQueryTransformer;
 
@@ -17,7 +18,6 @@ import static dev.langchain4j.internal.Exceptions.illegalArgument;
 import static dev.langchain4j.internal.Utils.getOrDefault;
 import static dev.langchain4j.internal.ValidationUtils.ensureNotNull;
 import static java.util.Collections.emptyList;
-import static java.util.stream.Collectors.toList;
 
 /**
  * A {@link ContentAggregator} that performs re-ranking using a {@link ScoringModel}, such as Cohere.
@@ -125,7 +125,7 @@ public class ReRankingContentAggregator implements ContentAggregator {
 
         List<TextSegment> segments = contents.stream()
                 .map(Content::textSegment)
-                .collect(toList());
+                .toList();
 
         List<Double> scores = scoringModel.scoreAll(segments, query.text()).content();
 
@@ -137,10 +137,9 @@ public class ReRankingContentAggregator implements ContentAggregator {
         return segmentToScore.entrySet().stream()
                 .filter(entry -> minScore == null || entry.getValue() >= minScore)
                 .sorted(Map.Entry.<TextSegment, Double>comparingByValue().reversed())
-                .map(Map.Entry::getKey)
-                .map(Content::from)
+                .map(entry -> new Content(entry.getKey(), Map.of(ContentMetadata.RERANKED_SCORE, entry.getValue())))
                 .limit(maxResults)
-                .collect(toList());
+                .toList();
     }
 
     public static class ReRankingContentAggregatorBuilder {
